--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "extendable-media-recorder": "^7.1.5",
     "extendable-media-recorder-wav-encoder": "^7.0.84",
     "react-device-detect": "^2.2.3",
-    "snake-case": "^3.0.4"
+    "snake-case": "^3.0.4",
+    "buffer": "^6.0.3"
   }
 }
