--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "extendable-media-recorder": "^7.1.5",
     "extendable-media-recorder-wav-encoder": "^7.0.84",
     "react-device-detect": "^2.2.3",
-    "snake-case": "^3.0.4",
-    "buffer": "^6.0.3"
+    "recordrtc": "^5.6.2",
+    "snake-case": "^3.0.4"
   }
 }
