extra data field

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vocode",
-  "version": "1.0.37",
+  "name": "vocode-react-art",
+  "version": "1.0.38",
   "description": "",
   "homepage": "https://vocode.dev",
   "repository": {
