--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "extendable-media-recorder-wav-encoder": "^7.0.84",
     "react-device-detect": "^2.2.3",
     "recordrtc": "^5.6.2",
-    "snake-case": "^3.0.4"
+    "snake-case": "^3.0.4",
+    "vocode-react-art": "^1.0.40"
   }
 }
